manifests-tested/50-pod+livenessProbe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample
  labels:
    app: sample
spec:
  containers:
  - name: app
    image: abdennour/sample-app:v1
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        path: /info.html
        port: 80
