manifests-tested/04.pod+service.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: sample
  labels:
    app: sample
spec:
  containers:
  - name: app
    image: abdennour/sample-app:v1
    ports:
    - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector: # <-- mapped to labels of Pods
    app: sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # <--- mapped to containerPort of Pod
#  kubectl port-forward svc/foobar 8888:80
