manifests-tested/06.replicaset+service+ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector: # <-- mapped to labels of Pods
    app: sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # <--- mapped to containerPort of Pod
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sample.vemessage.com
    http:
      paths:
      - backend:
          serviceName: sample-service
          servicePort: 80
